# mystery-recipe-backend

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: db.py  main.py
app/core/: auth.py  config.py  db.py  utils.py
app/routers/: ingredient_router.py  ingredients.py  inventory_router.py  line_bot_router.py  recipe.py  recipe_router.py
app/schemas/: emoji_map_schema.py  ingredient_master_schema.py  inventory_schema.py  recipe_schema.py
app/services/: db_service.py  gpt_generator.py  gpt_service.py  line_bot_service.py  recommender.py
